Saved CSS Design

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Cañedo_Jelyn_Act_Project</title>
+        <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <div class="titles">
@@ -12,31 +13,31 @@
                 
                     <p class="details">
                         Fullname:  Jelyn Canedo
-                        <br>
+                        <br><br>
                         Date of Birth:October 27,2003
-                        <br>
+                        <br><br>
                         Gender:Female
-                        <br>
+                        <br><br>
                         Contact Number:09949310993
-                        <br>
+                        <br><br>
                         Email:jelyncanedo@gmail.com
                         <br>
-                        Address:Hinlayagan,Ilaya,Trinidad,Bohol
-                        <br>
+                       <br> Address:Hinlayagan,Ilaya,Trinidad,Bohol
+                        <br><br>
                         Nationality:Filipino
-                        <br>
+                        <br><br>
                         Marital Status:Single
-                        <br>
+                        <br><br>
                         Educational Qualifications:
-                        <br>
+                        <br><br>
                         Work Experience:N/A
-                        <br>
+                        <br><br>
                         Skills:
-                        <br>
+                        <br><br>
                         Language Known:English
-                        <br>
+                        <br><br>
                         References: None
-                        <br>
+                        <br><br>
                         </p>
                         
                         </p>
